# tokenwatt

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.githooks/: leak-patterns  leak-patterns.local.example  leak-scan  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/design/plans/: 2026-06-19-tokenwatt-m0.md  2026-06-19-tokenwatt-m1a.md  2026-06-19-tokenwatt-m1b.md  2026-06-19-tokenwatt-m1c-a.md  2026-06-19-tokenwatt-m1c-b.md  2026-06-20-tokenwatt-logging.md
docs/design/specs/: 2026-06-19-tokenwatt-design.md  2026-06-20-tokenwatt-logging-design.md
scripts/: setup.sh
src/tokenwatt/: __init__.py  __main__.py  cli.py  cloud.py  coldstart.py  config.py  cost.py  discovery.py  doctor.py  idle.py  ledger.py  log.py  meter.py  proxy.py  rate.py  reqtype.py  router.py  usage.py
src/tokenwatt/data/: m1-v1-embeddings.yaml
tests/: conftest.py  test_cli_compare.py  test_cli_config.py  test_cli_logging.py  test_cli_smoke.py  test_cloud.py  test_coldstart.py  test_config.py  test_config_loader.py  test_config_logging.py  test_cost.py  test_discovery.py  test_doctor.py  test_idle.py  test_leak_scan.py  test_ledger.py  test_log.py  test_meter.py  test_proxy.py  test_report_render.py  test_reqtype.py  test_router.py  test_usage.py
