[build-system]
requires = ["setuptools>=77"]   # >=77 for PEP 639 SPDX license metadata
build-backend = "setuptools.build_meta"

[project]
name = "tokenwatt"
description = "Know what your local LLM inference actually costs in electricity (Apple Silicon)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Justin Stewart", email = "justinstewart313+tokenwatt@gmail.com" }]
keywords = ["llm", "inference", "electricity", "energy", "cost", "apple-silicon", "mlx", "proxy", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
]
dynamic = ["version"]
dependencies = [
    "starlette>=1.0,<2",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "typer>=0.12",
    "tiktoken>=0.7",
    # native energy reader — Apple Silicon only; marker keeps `pip install` working elsewhere
    "zeus-apple-silicon>=1.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.scripts]
tokenwatt = "tokenwatt.cli:main"

[project.urls]
Homepage = "https://github.com/mmmugh/tokenwatt"
Repository = "https://github.com/mmmugh/tokenwatt"
Issues = "https://github.com/mmmugh/tokenwatt/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokenwatt = ["data/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
